methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:14: error: ';' expected but 'else' found.
  return(true); else return(false)
                ^